--- a/responsive web design projects/tribute page/tribute-page.html
+++ b/responsive web design projects/tribute page/tribute-page.html
@@ -8,7 +8,7 @@
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/tribute-page.css">
 
   
 </head>
