--- a/responsive web design projects/survey form/survey-form.html
+++ b/responsive web design projects/survey form/survey-form.html
@@ -9,7 +9,7 @@
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/survey-form.css">
 
   
 </head>
