--- a/responsive web design projects/portfolio/portfolio.html
+++ b/responsive web design projects/portfolio/portfolio.html
@@ -3,14 +3,62 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+  <title>Personal Portfolio webpage</title>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
+<!-- 
 
+Hello Camper!
+
+For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+
+- The freeCodeCamp Team 
+
+-->
+<nav>
+  <ul id="navbar">
+    <li><a href="#welcome-section">About</a></li>
+    <li><a href="projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
+<div id="welcome-section" class="intro">
+  <h1>Hey i'm Zircoz.</h1>
+  <p>a web developer</p>
+</div>
+
+<div id="projects" class="work">
+  <h2 class="work-header">These are some of my projects...</h2>
+  <a href="https://codepen.io/Zircoz/full/QQYQOx" target="_blank" class="project project-tile">
+    <img class="project-pic" src="img/tribute-page-free-codecamp.png" alt="project">
+    <div class="project-title">Tribute Page</div>
+  </a>
+  <a href="https://codepen.io/Zircoz/full/NEzvqj" target="_blank" class="project project-tile">
+    <img class="project-pic" src="img/product-landing-page-freecodecamp.png" alt="project">
+    <div class="project-title">Product Landing Page</div></a>
+  <a href="https://codepen.io/Zircoz/full/EOdQEz" target="_blank" class="project project-tile">
+    <img class="project-pic" src="img/technical-documentation-freecodecamp.png" alt="project">
+    <div class="project-title">Technical Documentation Page</div></a>
+  <a href="https://codepen.io/Zircoz/full/gQgrjN" target="_blank" class="project project-tile">
+    <img class="project-pic" src="img/Survey-Form-freeCodeCamp.png" alt="project">
+    <div class="project-title">Survey Form</div></a>
+</div>
+
+<div id="contact" class="contact">
+  <div class="header">
+    <h1>Let's create together...</h1>
+    <p>How do you take your coffee?</p>
+  </div>
+  <a href="https://facebook.com/zircoz" target="_blank" class="contact-details">Facebook</a>
+  <a href="https://twitter.com/zircoz" target="_blank" class="contact-details">Twitter</a>
+  <a href="https://github.com/zircoz" id="profile-link" target="_blank" class="contact-details">Github</a>
+  <a href="mailto:zircoz@outlook.com" class="contact-details">E-mail</a>
+</div>
 </body>
 </html>
